--- a/frontend/src/components/SalesCard/styles.css
+++ b/frontend/src/components/SalesCard/styles.css
@@ -77,7 +77,7 @@
     display: none;
 }
 
-@media(min-widht: 576px) {
+@media(min-width: 576px) {
     .show576 {
         display: table-cell;
     }
@@ -95,7 +95,7 @@
     }
 }
 
-@media(min-widht: 992px) {
+@media(min-width: 992px) {
     .show992 {
         display: table-cell;
     }
